fix dark mode

--- a/src/styles/layout/_layout.scss
+++ b/src/styles/layout/_layout.scss
@@ -6,7 +6,6 @@
 
   .layout--standard-console {
     &__header {
-      background: white;
       border-bottom: 1px solid gray;
       height: 50px;
     }
